# simple-compiler

./: .clang-tidy  .gitignore  CMakeLists.txt  compile-and-run.sh  program.zz
src/: CMakeLists.txt  main.cpp  parser.bison  parser.cpp  parser.output  scanner.cpp  scanner.flex  token.h  token0.h
tests/: CMakeLists.txt  test.cpp
